--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,8 +1,9 @@
 project:
   type: website
+  output-dir: docs
 
 website:
-  title: "blog"
+  title: "jrds"
   navbar:
     right:
       - about.qmd
